<resources>
    <string name="app_name">MichałBoryczko</string>
    <string name="pairDescriptionTextView">Market</string>
    <string name="lastPriceDescriptionTextView">Last Price</string>
    <string name="volumeDescriptionTextView">Volume</string>
    <string name="timeDescriptionTextView">Last updated: </string>
    <string name="lowestPriceDescriptionTextView">Lowest price: </string>
    <string name="highestPriceDescriptionTextView">Highest price: </string>
    <string name="noInternetConnectionError">No internet connection.\n Click to retry.</string>
    <string name="unknownError">Error occurred.\n Please retry.</string>


    <!--menu-->
    <string name="login_button">Login</string>
    <string name="create_session">Create session</string>
    <string name="join_session">Join session</string>


    <!--errors -->
    <string name="unknown_error">Unexpected error has occurred</string>
    <string name="no_internet">No internet connected</string>
    <string name="unathorized_error">Session ended</string>
    <string name="wrong_password">Wrong password</string>

    <!--register-->
    <string name="email_hint">E-mail</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Register</string>
    <string name="account_created">Account created</string>

    <string name="invalid_email">Invalid e-mail address</string>
    <string name="invalid_username_too_short">Username should have at least 3 characters</string>
    <string name="invalid_password_too_short">Password should have at least 3 characters</string>
    <string name="invalid_password_no_number">Password should have at 1 number</string>


    <!--login -->
    <string name="login_empty">Login should not be empty</string>
    <string name="password_empty">Password should not be empty</string>
    <string name="login_successful">Logged in successfully</string>
    <string name="register_prompt">Don\'t have an account? </string>
    <string name="register_here">Register here.</string>
</resources>
