<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.michalboryczko.exercise.ui.pairs.CryptocurrencyPairActivity">



    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="12dp"
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pairDescriptionTextView"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/pairDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lastPriceDescriptionTextView"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_toRightOf="@+id/pairTextView"
            android:text="@string/lastPriceDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/volumeDescriptionTextView"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_toRightOf="@+id/lastPriceTextView"
            android:text="@string/volumeDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cryptocurrencyPairsRecycler"
        android:layout_below="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/permanentErrorTextView"
        tools:text="Permanent error"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</RelativeLayout>
